--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </button>
         </div>
       </div>
-      <video src="assets/Video.mp4">
+      <video src="assets/video.mp4">
         <track kind="captions" srclang="en" src="assets/subtitles.vtt">
       </video>
     </div>
